# sdk-contract/sdk-exchange/sdk-exchange-auth/sdk-service-exchange-auth-rest-api/src/main/resources/openapi/exchange-auth.openapi.yaml
@@ -49,19 +49,16 @@ components:
   schemas:
     AuthCredentialCreateRequest:
       type: object
-      required: [userId, credentialType, secretHash, status]
+      required: [userId, credentialType, secret, status]
       properties:
         userId:
           type: integer
           format: int64
         credentialType:
           $ref: '#/components/schemas/AuthCredentialType'
-        secretHash:
+        secret:
           type: string
           maxLength: 512
-        salt:
-          type: string
-          maxLength: 128
         status:
           type: string
           maxLength: 32
